<resources>
    <string name="app_name">CourseProject</string>
    <string name="login">Login</string>
    <string name="password">Password</string>


    <string name="toastMassage">Please enter %1$s</string>
    <string name="toastMassageRegistationFail">Please enter</string>
    <string name="toastMassageErCredential">Please enter</string>
    <string name="toastMassageErEmail">Please enter email</string>
    <string name="toastInvalidEmailAddress">Incorrect email address</string>
    <string name="and">and</string>
    <string name="or">or</string>
    <string name="forgot_password">Forgot password</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign in</string>
    <string name="toastViewPassword">Your password:</string>
    <string name="toastEmailRegister">This email has been registered</string>
    <string name="toastSuccessfullRegister">You have successfully registered</string>
    <string name="notCorrect">Not correct</string>
    <string name="profile">Profile</string>
    <string name="posts">Posts</string>
    <string name="comments">Comments</string>
    <string name="my_comments">My comments</string>
    <string name="albums">Albums</string>
    <string name="images">Images</string>
    <string name="my_images">My images</string>
    <string name="todos">Todos</string>
    <string name="my_todos">My Todo</string>
    <string name="user_name">User name:</string>
    <string name="phone">Phone:</string>
    <string name="website">Website:</string>
    <string name="street">Street:</string>
    <string name="city">City:</string>
    <string name="company">Company</string>
    <string name="name">Name:</string>
    <string name="catch_phrase">Catch phrase:</string>
    <string name="logout">Logout</string>
    <string name="zipcode">Zipcode:</string>
    <string name="suite">Suite:</string>
    <string name="address">Address</string>
    <string name="this_email_is_not_register">This email has not been registered</string>
</resources>
