<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_posts"
            android:icon="@drawable/ic_posts"
            android:title="@string/posts" />
        <item
            android:id="@+id/nav_comments"
            android:icon="@drawable/ic_comments"
            android:title="@string/comments" />
        <item
            android:id="@+id/nav_albums"
            android:icon="@drawable/ic_albums"
            android:title="@string/albums" />
        <item
            android:id="@+id/nav_images"
            android:icon="@drawable/ic_images"
            android:title="@string/images" />
        <item
            android:id="@+id/nav_todos"
            android:icon="@drawable/ic_todos"
            android:title="@string/todos" />
    </group>
</menu>