<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/nav_profile"
        android:textAlignment="textStart"
        android:drawableStart="@drawable/ic_profile"
        android:padding="@dimen/smallGap"
        android:drawablePadding="@dimen/middleGap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/header_text_big"
        android:text="@string/profile"/>

    <Button
        android:id="@+id/nav_posts"
        android:textAlignment="textStart"
        android:drawableStart="@drawable/ic_posts"
        android:padding="@dimen/smallGap"
        android:drawablePadding="@dimen/middleGap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/header_text_big"
        android:text="@string/posts"/>

    <Button
        android:id="@+id/nav_comments"
        android:textAlignment="textStart"
        android:drawableStart="@drawable/ic_comments"
        android:padding="@dimen/smallGap"
        android:drawablePadding="@dimen/middleGap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/header_text_big"
        android:text="@string/comments"/>

    <Button
        android:id="@+id/nav_albums"
        android:textAlignment="textStart"
        android:drawableStart="@drawable/ic_albums"
        android:padding="@dimen/smallGap"
        android:drawablePadding="@dimen/middleGap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/header_text_big"
        android:text="@string/albums"/>

    <Button
        android:id="@+id/nav_images"
        android:textAlignment="textStart"
        android:drawableStart="@drawable/ic_images"
        android:padding="@dimen/smallGap"
        android:drawablePadding="@dimen/middleGap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/header_text_big"
        android:text="@string/images"/>

    <Button
        android:id="@+id/nav_todos"
        android:textAlignment="textStart"
        android:drawableStart="@drawable/ic_todos"
        android:padding="@dimen/smallGap"
        android:drawablePadding="@dimen/middleGap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/header_text_big"
        android:text="@string/todos"/>

</LinearLayout>